2011-11-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkImageCommand): Include the number of
	threads used in the benchmark results output.
	(BenchmarkImageCommand): New benchmark option -stepthreads to
	execute the specified command with an increasing number of threads
	to measure how an algorithm benefits from threading.
	(BenchmarkImageCommand): Fix benchmark argument parsing so it is
	not order dependent.
	(BenchmarkImageCommand): Add a speedup indication to -stepthreads
	output.

	* config/delegates.mgk.in: File names in gnuplot files need to be
	surrounded by double quotes or gnuplot parser will reject them.

2011-11-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (GetMedianList): Return PixelPacket via pointer
	rather than by value.

	* version.sh: For snapshots packages, PACKAGE_CHANGE_DATE now uses
	a form like "snapshot-20111121" rather than "unreleased" so it is
	possible to determine the vintage of an installed snapshot.

2011-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tga.c (ReadTGAImage): Fix for poor TGA reading
	performance due to excessive use of GetBlobByte().  Performance is
	fixed by adding local buffering.  Fixes SourceForge bug 3439531
	"Slow TGA reading".

2011-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (AdaptiveThresholdImage): More performance
	improvements.

2011-11-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/analyze.c (GetImageBoundingBox): Add a special case to
	handle absolute color comparison.

2011-11-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Update libpng to 1.5.6 release.

2011-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Avoid linker warnings when building GraphicsMagick
	regarding OpenMP library being included multiple times.

2011-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (GetIPTCStream): Eliminate possible use of